update codes